fix/mod: shaders.properties: add Gbuffers link to stars as well

--- a/src/content/docs/reference/Shaders.Properties/stars.mdx
+++ b/src/content/docs/reference/Shaders.Properties/stars.mdx
@@ -13,4 +13,4 @@ sidebar:
 
 #### Location: shaders.properties
 
-Enables or disables rendering of the vanilla star geometry in gbuffers_skybasic.
+Enables or disables rendering of the vanilla star geometry in [`gbuffers_skybasic`](/reference/programs/gbuffers).
