--- a/src/content/docs/reference/Shaders.Properties/overview.mdx
+++ b/src/content/docs/reference/Shaders.Properties/overview.mdx
@@ -9,11 +9,36 @@ import { Badge } from '@astrojs/starlight/components';
 
 The `shaders.properties` is a text file placed in the `shaders` folder that allows for configuring many options of a shaderpack. This file has two main purposes:
 
-1. Configuring internal shader settings
-2. Configuring and displaying user accessible shader options
+1. Configuring and displaying user accessible shader options
+2. Configuring internal shader settings
 
 
-### Internal Shader Settings
+## User Accessible Shader Options
+`shaders.properties` can be used to configure user accessible options, which appear in the "Shader Pack Settings" screen in Iris. More info can be found in the [shader settings page](/reference/shadersproperties/shader_settings).
+
+The following directives are available to control user accessible options:
+
+### shaders.properties
+| Directive                                                                              | Description                                                                                                 |
+| -------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------- |
+| [screen](/reference/shadersproperties/shader_settings#configuring-the-settings-screen) | Controls which shader options are displayed in the "Shader Pack Settings" screen and how they are displayed |
+| [sliders](/reference/shadersproperties/shader_settings#sliders)                        | Controls which shader options should be displayed as sliders                                                |
+| [profile](/reference/shadersproperties/shader_settings#profiles)                       | Defines profiles, i.e. pre-configured sets of user options selectable in the "Shader Pack Settings" screen  |
+
+### .lang files
+.lang files can be used to add language specific overrides to option names and further customize how options appear in the "Shader Pack Settings" screen. The following directives are available in .lang files:
+
+| Directive                                                               | Description                                 |
+| ----------------------------------------------------------------------- | ------------------------------------------- |
+| [option](/reference/shadersproperties/shader_settings#option-labels)    | Changes the visible name of an option       |
+| [value](/reference/shadersproperties/shader_settings#value-labels)      | Changes the visible name of an option value |
+| [prefix](/reference/shadersproperties/shader_settings#value-labels)     | Adds a prefix to all values of an option    |
+| [suffix](/reference/shadersproperties/shader_settings#value-labels)     | Adds a suffix to all values of an option    |
+| [comment](/reference/shadersproperties/shader_settings#option-tooltips) | Adds/changes the tooltip for an option      |
+
+
+
+## Internal Shader Settings
 The file can contain any of the properties described in this section, in any order. These properties control aspects of the shader pipeline. For example:
 
 ```properties
@@ -25,68 +50,61 @@ image.testImage = testSampler rgba rgba8 float false true 1.0 1.0
 
 Preprocessor directives can be used inside this file based on shader option macros, which are defined automatically. However, you cannot use `#define` or `#include` in `shaders.properties`.
 
-## Programs / Ordering
-| Directive                                                                                  | Description | Tag |
-| ------------------------------------------------------------------------------------------ | ----------- | --- |
-| [particles.ordering](/reference/shadersproperties/ordering#particlesordering)              | Controls the order in the pipeline particles will be rendered | <Badge text="Iris Exclusive" variant="tip"/> |
-| [particles.before.deferred](/reference/shadersproperties/ordering#particlesbeforedeferred) | Legacy option for `particles.ordering` |  |
+Below is an index of shaders.properties directives available in Iris. Directives marked as <Badge text="Iris Exclusive" variant="tip"/> are only available in Iris, and any unmarked uniforms is available in either Optifine or Iris.
+
+### Programs / Ordering
+| Directive                                                                                  | Description                                                                                      | Tag                                          |
+| ------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------ | -------------------------------------------- |
+| [particles.ordering](/reference/shadersproperties/ordering#particlesordering)              | Controls the order in the pipeline particles will be rendered                                    | <Badge text="Iris Exclusive" variant="tip"/> |
+| [particles.before.deferred](/reference/shadersproperties/ordering#particlesbeforedeferred) | Legacy option for particle ordering, replaced by `particles.ordering`                            |                                              |
 | [separateEntityDraws](/reference/shadersproperties/ordering#separateentitydraws)           | Controls whether translucent entities/block entities are drawn before or after the deferred pass | <Badge text="Iris Exclusive" variant="tip"/> |
-| [program.enabled](/reference/shadersproperties/ordering#programenabled)                    | Allows programs to be disabled based on shader options |  |
-| [shadow.enabled](/reference/shadersproperties/ordering#shadowenabled)                      | Enables or disables the shadow pass | <Badge text="Iris Exclusive" variant="tip"/> |
-| [shadowBlockEntities](/reference/shadersproperties/ordering#shadowblockentities)           | Sets whether block entities are rendered in the shadow pass |  |
-| [shadowEntities](/reference/shadersproperties/ordering#shadowentities)                     | Sets whether entities are rendered in the shadow pass |  |
-| [shadowTerrain](/reference/shadersproperties/ordering#shadowterrain)                       | Sets whether terrain is rendered in the shadow pass |  |
-| [shadowTranslucent](/reference/shadersproperties/ordering#shadowtranslucent)               | Sets whether translucent terrain is rendered in the shadow pass |  |
-| [shadowPlayer](/reference/shadersproperties/ordering#shadowplayer)                         | Sets whether the player is rendered in the shadow pass | <Badge text="Iris Exclusive" variant="tip"/> |
-| [skipAllRendering](/reference/shadersproperties/ordering#skipallrendering)                 | Enables or disables most gbuffers passes | <Badge text="Iris Exclusive" variant="tip"/> |
-| [voxelizeLightBlocks](/reference/shadersproperties/ordering#voxelizelightblocks)           | Renders light blocks as an invisible quad in the shadow pass so that they can be voxelized | <Badge text="Iris Exclusive" variant="tip"/> |
-| [allowConcurrentCompute](/reference/shadersproperties/ordering#allowconcurrentcompute)     | Enables concurrent compute passes | <Badge text="Iris Exclusive" variant="tip"/> |
-| [indirect.pass](/reference/shadersproperties/ordering#indirectpass)                        | Allows you to dispatch a compute shader with the work group amount specified from a SSBO | <Badge text="Iris Exclusive" variant="tip"/> |
+| [program.enabled](/reference/shadersproperties/ordering#programenabled)                    | Allows programs to be disabled based on shader options                                           |                                              |
+| [shadow.enabled](/reference/shadersproperties/ordering#shadowenabled)                      | Enables or disables the shadow pass                                                              | <Badge text="Iris Exclusive" variant="tip"/> |
+| [shadowBlockEntities](/reference/shadersproperties/ordering#shadowblockentities)           | Sets whether block entities are rendered in the shadow pass                                      |                                              |
+| [shadowEntities](/reference/shadersproperties/ordering#shadowentities)                     | Sets whether entities are rendered in the shadow pass                                            |                                              |
+| [shadowTerrain](/reference/shadersproperties/ordering#shadowterrain)                       | Sets whether terrain is rendered in the shadow pass                                              |                                              |
+| [shadowTranslucent](/reference/shadersproperties/ordering#shadowtranslucent)               | Sets whether translucent terrain is rendered in the shadow pass                                  |                                              |
+| [shadowPlayer](/reference/shadersproperties/ordering#shadowplayer)                         | Sets whether the player is rendered in the shadow pass                                           | <Badge text="Iris Exclusive" variant="tip"/> |
+| [skipAllRendering](/reference/shadersproperties/ordering#skipallrendering)                 | Enables or disables most gbuffers passes                                                         | <Badge text="Iris Exclusive" variant="tip"/> |
+| [voxelizeLightBlocks](/reference/shadersproperties/ordering#voxelizelightblocks)           | Renders light blocks as an invisible quad in the shadow pass so that they can be voxelized       | <Badge text="Iris Exclusive" variant="tip"/> |
+| [allowConcurrentCompute](/reference/shadersproperties/ordering#allowconcurrentcompute)     | Enables concurrent compute passes                                                                | <Badge text="Iris Exclusive" variant="tip"/> |
+| [indirect.pass](/reference/shadersproperties/ordering#indirectpass)                        | Allows you to dispatch a compute shader with the work group amount specified from a SSBO         | <Badge text="Iris Exclusive" variant="tip"/> |
 
 
-## Features / Options
-| Directive                                                                               | Description | Tag |
-| --------------------------------------------------------------------------------------- | ----------- | --- |
-| [clouds](/reference/shadersproperties/options#clouds)                                   | Enables or disables vanilla cloud rendering |  |
-| [moon](/reference/shadersproperties/options#moon)                                       | Enables or disables rendering of the moon texture in `gbuffers_skytextured` |  |
-| [sun](/reference/shadersproperties/options#sun)                                         | Enables or disables rendering of the sun texture in `gbuffers_skytextured` |  |
-| [sky](/reference/shadersproperties/options#sky)                                         | Enables or disables rendering of vanilla sky in `gbuffers_skybasic` | <Badge text="Iris Beta Exclusive" variant="note"/> |
-| [stars](/reference/shadersproperties/options#stars)                                     | Enables or disables rendering of stars in the sky in `gbuffers_skybasic` | <Badge text="Iris Beta Exclusive" variant="note"/> |
-| [underwaterOverlay](/reference/shadersproperties/options#underwateroverlay)             | Enables or disables the water texture overlay when the player is underwater |  |
-| [vignette](/reference/shadersproperties/options#vignette)                               | Enables or disables rendering of the vignette overlay |  |
-| [oldHandLight](/reference/shadersproperties/options#oldhandlight)                       | Sets heldBlockLightValue to use whichever hand's value is higher |  |
-| [oldLighting](/reference/shadersproperties/options#oldlighting)                         | Enables the "old lighting", which applies a lighting multiplier in the color attribute based on the block's orientation |  |
-| [separateAo](/reference/shadersproperties/options#separateao)                           | Controls whether vanilla AO is stored in the RGB or A components of the color vertex attribute |  |
-| [supportsColorCorrection](/reference/shadersproperties/options#supportscolorcorrection) | Allows the shader to perform its own conversion to a different color space | <Badge text="Iris Exclusive" variant="tip"/> |
+### Features / Options
+| Directive                                                                                | Description                                                                                                             | Tag                                                |
+| ---------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------- |
+| [clouds](/reference/shadersproperties/features#clouds)                                   | Enables or disables vanilla cloud rendering                                                                             |                                                    |
+| [moon](/reference/shadersproperties/features#moon)                                       | Enables or disables rendering of the moon texture in `gbuffers_skytextured`                                             |                                                    |
+| [sun](/reference/shadersproperties/features#sun)                                         | Enables or disables rendering of the sun texture in `gbuffers_skytextured`                                              |                                                    |
+| [sky](/reference/shadersproperties/features#sky)                                         | Enables or disables rendering of vanilla sky in `gbuffers_skybasic`                                                     | <Badge text="Iris Beta Exclusive" variant="note"/> |
+| [stars](/reference/shadersproperties/features#stars)                                     | Enables or disables rendering of stars in the sky in `gbuffers_skybasic`                                                | <Badge text="Iris Beta Exclusive" variant="note"/> |
+| [underwaterOverlay](/reference/shadersproperties/features#underwateroverlay)             | Enables or disables the water texture overlay when the player is underwater                                             |                                                    |
+| [vignette](/reference/shadersproperties/features#vignette)                               | Enables or disables rendering of the vignette overlay                                                                   |                                                    |
+| [oldHandLight](/reference/shadersproperties/features#oldhandlight)                       | Sets heldBlockLightValue to use whichever hand's value is higher (for legacy support)                                   |                                                    |
+| [oldLighting](/reference/shadersproperties/features#oldlighting)                         | Enables the "old lighting", which applies a lighting multiplier in the color attribute based on the block's orientation |                                                    |
+| [separateAo](/reference/shadersproperties/features#separateao)                           | Controls whether vanilla AO is stored in the RGB or A components of the color vertex attribute                          |                                                    |
+| [supportsColorCorrection](/reference/shadersproperties/features#supportscolorcorrection) | Allows the shader to perform its own conversion to a different color space                                              | <Badge text="Iris Exclusive" variant="tip"/>       |
 
 
-## Rendering
-| Directive                                                                    | Description | Tag |
-| ---------------------------------------------------------------------------- | ----------- | --- |
-| [alphaTest](/reference/shadersproperties/rendering#alphatest)                | Controls the alpha test for cutout programs |  |
-| [blend](/reference/shadersproperties/rendering#blend)                        | Controls the alpha blending for a specific program, optionally per-buffer |  |
-| [scale](/reference/shadersproperties/rendering#scale)                        | Defines a new viewport for a composite style program |  |
-| [flip](/reference/shadersproperties/rendering#flip)                          | Enable or disable buffer flipping for a composite style pass |  |
-| [size.buffer](/reference/shadersproperties/rendering#sizebuffer)             | Sets the resolution of a colortex buffer |  |
-| [backFace](/reference/shadersproperties/rendering#backface)                  | Enables or disables back-face culling for each type of rendering |  |
-| [frustum.culling](/reference/shadersproperties/rendering#frustumculling)     | Enables or disables frustum culling |  |
-| [occlusion.culling](/reference/shadersproperties/rendering#occlusionculling) | Enables or disables occlusion culling, which culls geometry which is behind other opaque geometry | <Badge text="Iris Exclusive" variant="tip"/> |
-| [shadow.culling](/reference/shadersproperties/rendering#shadowculling)       | Controls culling in the shadow pass |  |
-| [rain.depth](/reference/shadersproperties/rendering#raindepth)               | Whether rain and snow should write to the depth buffer |  |
-| [beacon.beam.depth](/reference/shadersproperties/rendering#beaconbeamdepth)  | Sets whether beacon beams write to the depth buffer |  |
+### Rendering
+| Directive                                                                    | Description                                                                      | Tag                                          |
+| ---------------------------------------------------------------------------- | -------------------------------------------------------------------------------- | -------------------------------------------- |
+| [alphaTest](/reference/shadersproperties/rendering#alphatest)                | Sets the alpha test function for cutout programs                                 |                                              |
+| [blend](/reference/shadersproperties/rendering#blend)                        | Sets the alpha blending parameters for a specific program, optionally per-buffer |                                              |
+| [scale](/reference/shadersproperties/rendering#scale)                        | Defines a new viewport for a composite style program                             |                                              |
+| [flip](/reference/shadersproperties/rendering#flip)                          | Enable or disable buffer flipping for a composite style program                  |                                              |
+| [size.buffer](/reference/shadersproperties/rendering#sizebuffer)             | Sets the resolution of a colortex buffer                                         |                                              |
+| [backFace](/reference/shadersproperties/rendering#backface)                  | Enables or disables back-face culling for each type of rendering                 |                                              |
+| [frustum.culling](/reference/shadersproperties/rendering#frustumculling)     | Enables or disables frustum culling                                              |                                              |
+| [occlusion.culling](/reference/shadersproperties/rendering#occlusionculling) | Enables or disables occlusion culling                                            | <Badge text="Iris Exclusive" variant="tip"/> |
+| [shadow.culling](/reference/shadersproperties/rendering#shadowculling)       | Controls culling in the shadow pass                                              |                                              |
+| [rain.depth](/reference/shadersproperties/rendering#raindepth)               | Sets whether rain and snow write to the depth buffer                             |                                              |
+| [beacon.beam.depth](/reference/shadersproperties/rendering#beaconbeamdepth)  | Sets whether beacon beams write to the depth buffer                              |                                              |
 
 
-## Shader Pack Settings Screen
-| Directive                                                                              | Description |
-| -------------------------------------------------------------------------------------- | ----------- |
-| [screen](/reference/shadersproperties/shader_settings#configuring-the-settings-screen) | Controls which shader options are displayed in the "Shader Pack Settings" screen and how they are displayed |
-| [sliders](/reference/shadersproperties/shader_settings#sliders)                        | Controls which shader options should be displayed as sliders |
-| [profile](/reference/shadersproperties/shader_settings#profiles)                       | Allows defining of profiles, which are preconfigured sets of user options selectable through a `profile` button in the "Shader Pack Settings" screen |
-| [.lang files](/reference/shadersproperties/shader_settings#lang-files)                   | .lang files can be added for any supported languages to add use friendly labels and tooltips to shader options |
-
-
-## Miscellaneous
-| Directive                                                                    | Description | Tag |
-| ---------------------------------------------------------------------------- | ----------- | --- |
-| [custom_uniforms](/reference/shadersproperties/custom_uniforms)                     | Iris lets you define custom uniforms which are evaluated on the CPU and uploaded on program change |  |
-| [flags](/reference/shadersproperties/flags)                                         | Feature flags are an Iris system to query the activation state of certain features | <Badge text="Iris Exclusive" variant="tip"/> |
+### Miscellaneous
+| Directive                                                       | Description | Tag |
+| --------------------------------------------------------------- | ----------- | --- |
+| [custom uniforms](/reference/shadersproperties/custom_uniforms) | Iris lets you define custom uniforms which are evaluated on the CPU and uploaded on program change |  |
+| [flags](/reference/shadersproperties/flags)                     | Feature flags are an Iris system to query the activation state of certain features | <Badge text="Iris Exclusive" variant="tip"/> |
