--- a/src/content/docs/reference/Shaders.Properties/rendering.mdx
+++ b/src/content/docs/reference/Shaders.Properties/rendering.mdx
@@ -3,7 +3,7 @@ title: "Rendering"
 description: "Rendering"
 sidebar:
   label: "Rendering"
-  order: 4
+  order: 5
 ---
 import { Badge } from '@astrojs/starlight/components';
 
@@ -92,6 +92,9 @@ Any buffer whose size is changed cannot be rendered to by a [`gbuffers`](/refere
 ## backFace
 ```properties
 backFace.solid=<true|false>
+backFace.cutout=<true|false>
+backFace.cutoutMipped=<true|false>
+backFace.translucent=<true|false>
 ```
 Enables or disables back-face culling for each type of rendering. This culls geometry which is facing away from the camera, improving performance. Back-face culling is enabled by default.
 
